# ITMO-Meetings

./: .env.template  .gitignore  README.md  justfile  main.py  pyproject.toml
.github/workflows/: pylint.yml
alembic/: env.py
alembic/versions/: 172085044088_edit_user__is_email_verified.py  91ef4a9ecc70_refresh_token.py  b9e7eafcdcb2_init.py  f4c9974ae4b7_fix_meeting_member.py
app/: settings.py
app/api/: __init__.py  deps.py  routing.py
app/api/endpoints/: channel.py  meeting.py  security.py  user.py
app/auth/: deps.py  endpoints.py  schemas.py  utils.py
app/database/: __init__.py  base.py  core.py  deps.py  utils.py
app/models/: __init__.py  category.py  channel.py  channel_member.py  feedback.py  meeting.py  meeting_memeber.py  refresh_token.py  secondary_tables.py  triggers.py  user.py  utils.py
app/schemas/: category.py  channel.py  channel_member.py  feedback.py  meeting.py  user.py  validators.py
app/utils/: e_mail.py  hash.py  security.py  time.py  urls.py
backend/: README.md  config.py  environ.sh  init_environ.sh  main.py  manage.py  requirements.txt
backend/app/: __init__.py  settings.py
backend/app/api/: __init__.py  authentication.py  decorators.py  deps.py  error_views.py  exceptions.py  forms.py  routing.py  utils.py  views.py
backend/app/auth/: deps.py  endpoints.py  utils.py
backend/app/database/: __init__.py  base.py  core.py
backend/app/forms/: exceptions.py  forms.py  validators.py
backend/app/main/: views.py
backend/app/models/: channel.py  channel_member.py  exceptions.py  feedback.py  meeting.py  meeting_memeber.py  mixins.py  models.py  user.py  (+2 more)
backend/tests/: test_api.py  test_forms.py  test_models.py
posgresql-scripts/: README.md  create_auth_test_data.sql  create_test_data.sql  drop.sql  example.sql  init.sql  init_auth.sql
(+16 files in other folders)
